--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2542,7 +2542,7 @@
     "\n",
     "Cuantas veces paso que:  \n",
     "\n",
-    "1. Se cerró una operación ganadora y había otra perdedora abierta no cerrada en ese momento.\n",
+    "1. Se cerró una operación ganadora y había otra perdedora abierta no cerrada en ese momento.\n",
     "\n",
     "2. Para cada una de las anteriores se cuentan las veces que:  \n",
     "    profit_perdedora/profit_acm < profit_ganadora/profit_acm  \n",
@@ -2550,7 +2550,7 @@
     "3. Para cada una de las anteriores se cuentan las veces que:  \n",
     "    profit_perdedora/profit_ganadora es > 2.0  \n",
     "\n",
-    "4. Si en el aumento o disminución del capital_acm, aumentaron las pérdidas o ganancias profit_ganadora & profit_perdedora contrastándolo con si el ratio profit_perdedora/profit_ganadora sigue siendo > 2.\n",
+    "4. Si en el aumento o disminución del capital_acm, aumentaron las pérdidas o ganancias profit_ganadora & profit_perdedora contrastándolo con si el ratio profit_perdedora/profit_ganadora sigue siendo > 2.\n",
     "\n",
     "Se obtiene una cierta cantidad de ocurrencias en las que se presentó el sesgo y con ello tenemos el tiempo en que sucedió correspondiente a cuando la operación ancla se cerró, puesto que es en este momento cuando permaneció abierta la operación perdedora relacionada y eso es de lo que nos habla el sesgo. En ocasiones se puede tener más de una operación perdedora relacionada a una ancla, sin embargo para este análisis se toma la operación perdedora con mayor pérdida. Para obtener lo mencionado anteriormente en relación a los profits es por medio de una comparación de los precios que tenían los activos al momento en que se incurre en el sesgo, y se hace la comparativa con su valor en pips correspondiente, puesto que como ya vimos los pips nos indican el cambio en puntos porcentuales respecto al precio. Entonces al dividir el profit de la perdedora entre los pips correspondientes al precio de cierre multiplicado por los nuevos pips del precio descargado reciente obtenemos el profit correspondiente a las operaciones perdedoras. De este modo, con los profits de las anclas y los proofits de las perdedoras que se obtienen podemos hacer las comparaciones y los conteos que nos arrojan el status quo, la aversión a la pérdida y la sensibilidad decreciente. \n",
     "\n",
@@ -5770,7 +5770,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -5784,7 +5784,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
